--- a/style.css
+++ b/style.css
@@ -2,21 +2,86 @@
 nexa
 aquavgrotesque
 */
-/*.menu{
-    background-color: white;
-    float: right;
-    /*padding: 0px 40px 0px 10px;
-    padding-bottom: -100px;
-    margin-top:-30px;
-    }
+*{
+    margin: 0; 
+    padding:0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
+    font-family: 'Poppins';
 
-.menu_item{
-    float: left;
-    padding-left:30px;
-    margin-top: -10 px;
-    list-style-type: none;
-*/
-@font-face {
+}
+
+:root{
+    --background: rgb(24,24,24);
+    --second-background:rgb(21,21,21);
+}
+
+body{ 
+    min-height: 100vh;
+    background-color: var(--background);
+}
+
+nav{
+    position: fixed;
+    top:0;
+    width: 100%;
+    padding:2em 15%;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(15,15,15,0.8);
+    backdrop-filter: blur(10px);
+    z-index: 1000;
+}
+
+ul{ 
+    display: flex;
+    align-items: center;
+    gap: 3em;
+}
+
+nav ul a{
+    color:white; 
+    opacity:0.7;
+    transition: 0.2s ease-in-out;
+}
+
+nav ul a:hover{
+    opacity: 1;
+}
+
+.logo{
+    font-size: 2em;
+    color: white;
+    font-weight: 800;
+    opacity: 0.8; 
+    transition: 0.2s ease-in-out;
+}
+.logo:hover{
+    opacity: 1;
+}
+
+.btn{
+    padding:0.5em 1em;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 0.5em;
+    font-size: 1.1em;
+    border:2px solid white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.btn:hover{
+    
+}
+
+
+
+/* @font-face {
     font-family:AgencyB ;
     src: url(fonts/AGENCYB.TTF);
 }
@@ -36,17 +101,42 @@ aquavgrotesque
 @font-face {
     font-family: Margarethy;
     src: url(fonts/Margarethy.ttf);
+} 
+
+
+
+
+ .menu_main{
+    background-color: black;
+    margin: 0px;
+    /* font-family:Lightnexa;
+    list-style-type: none;
+    float: right;
+    margin-right: 300px;
+    margin-top: 20px; 
+    font-size: 22px;  
+} 
+
+
+
+ .initial1{
+    font-family:Margarethy ;
+    list-style-type: none;
+    font-size: 50px;
+    font-weight: 15px;
 }
+.initial2{
+    font-family: Margarethy;
+    list-style-type: none;
+    font-size: 50px;
+    /* margin-left: 30px; 
+    font-weight: 15px;
+    
+} 
 
 
-nav{
-    /* background-color: white; */
-    height: 50px;   
-    color:white;
 
-}
-
-.Hello{
+/* .Hello{
     font-family: Lightnexa;
     padding-top: 50px;
     padding-left: 50px;
@@ -66,24 +156,10 @@ nav{
     padding-top:200px ;
     font-family: AgencyR;
     font-size: 20px;
-}
-.initial1{
-    font-family:Margarethy ;
-    list-style-type: none;
-    font-size: 75px;
-    font-weight: 15px;
-}
-.initial2{
-    font-family: Margarethy;
-    list-style-type: none;
-    font-size: 75px;
-    margin-top: -50px;
-    margin-left: 35px;
-    font-weight: 15px;
-    
-}
+} */
 
-.menu_main{
+
+/* .menu_main{
     font-family:Lightnexa;
     list-style-type: none;
     float: right;
@@ -92,16 +168,16 @@ nav{
     font-size: 22px;
    
 
-}
-.menu{ 
+} */
+/* .menu{ 
     float: left;
-    margin: 10px;
+    //margin: 10px;
     
     text-decoration: none;
 }
 .menu_main:hover{
     font-family: Heavynexa;  
-    color: white; 
+    color: rgb(39, 30, 30); 
    
 }
 
@@ -112,11 +188,10 @@ body{
     /*background-position: 300px 300px;*/
     /*background-color:rgba(65, 61, 61, 0.627);
     /*margin-top: 50px;
-    /*background-position:0px 100px; */  
+    /*background-position:0px 100px;  
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-image:url("images/bg_check.jpg"); 
-    background-image: linear-gradient( rgb(106, 30, 123),rgb(160, 93, 160), rgb(221, 170, 221));;
+    background-color: rgb(21, 17, 17);
     
     background-size: contain;
   
@@ -149,7 +224,7 @@ body{
 
 .Project_gallery{
    
-    /* margin-right: 20%; */
+    /* margin-right: 20%; 
     margin-top: 60px;
     position: relative;
     left: 300px;
@@ -159,7 +234,7 @@ body{
     
     right:0;
     margin: auto;
-    /* float: right; */
+    /* float: right; 
  
    
 }
@@ -195,8 +270,8 @@ body{
     border-width: 5px;
     
     text-align: center;
-}
-
+} */
+/* 
 .icons{
     display: inline-block;    
     list-style-type: none;
@@ -216,4 +291,4 @@ body{
 
 .linkedin{ 
     margin-left: 100px;
-}
+} */
