--- a/style.css
+++ b/style.css
@@ -263,6 +263,77 @@ section{
     gap: 2em;
 }
 
+.box{
+    border: 3px solid rgb(49,49,49);
+    border-radius: 0.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    object-fit: cover;
+    padding: 3em;
+    gap: 2em;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    
+}
+
+.box:hover{
+    border: 3px solid rgb(100,100,100);
+}
+
+.box h1{
+    font-size: 2em;
+}
+
+.box p{
+    opacity:0.8;
+}
+
+.box img{
+    min-width: 25px;
+    border-radius:0.5em;
+}
+
+
+/*---------------------Contact page-------------------*/
+
+#contact{
+    background-color: var(--second-background);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+
+}
+
+form .input-box{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 1em;
+}
+
+.input-box span{
+    font-size: 1.5em;
+}
+
+form input{
+    font-size: 1.3em;
+    padding: 1em 5em;
+    border-radius: 0.5em;
+    border: none;
+    outline: none;
+}
+
+form input:focus{ /*Focus means when you click, this is different from hover*/
+    background: rgb(229,229,229);
+}
 
 
 
